# as-built

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
as_built/: __init__.py  actions.py  backlog.py  cli.py  event_store.py  events.py  fixtures.py  llm_client.py  orchestrator.py  platform.py  stub_generator.py  stub_worker.py  tickets.py  worker.py
docs/: design-story.md
platform/: dbt_project.yml  profiles.yml
platform/models/mart/: mart_revenue_summary.sql
platform/models/staging/: stg_merchants.sql  stg_payments.sql
platform/seeds/: raw_fx_rates.csv  raw_merchants.csv  raw_payments.csv
prompts/: worker.md
