[project]
name = "as-built"
version = "0.0.1"
description = "A data platform with a biography, operated by agents."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "click>=8.1",
    "pydantic>=2.7",
    "dbt-duckdb>=1.8",
    "anthropic>=0.40",
]

[project.scripts]
as-built = "as_built.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["as_built"]
